# Unreal-Android

./: README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
android8/: gradle.properties  gradlew  gradlew.bat  local.properties
android8-arm64-v8a/app/: build.gradle.kts
android8-arm64-v8a/app/src/main/assets/ue1_config/: Default.ini
android8-arm64-v8a/app/src/main/cpp/: CMakeLists.txt
android8-arm64-v8a/app/src/main/cpp/UE1/Engine/Config/: Default.ini  Unreal.ini
android8-arm64-v8a/app/src/main/cpp/UE1/Source/: CMakeLists.txt
android8-arm64-v8a/app/src/main/cpp/UE1/Source/NOpenALDrv/: NOpenALDrv.cpp
android8-arm64-v8a/app/src/main/res/values/: strings.xml
android8-armeabi-v7a/: THIRDPARTY.md  settings.gradle.kts
android8-armeabi-v7a/app/: build.gradle.kts
android8-armeabi-v7a/app/src/main/assets/ue1_config/: AndroidUI.ini  Default.ini  Unreal.ini  User.ini
android8-armeabi-v7a/app/src/main/cpp/: CMakeLists.txt
android8-armeabi-v7a/app/src/main/cpp/UE1/Source/: CMakeLists.txt
android8-armeabi-v7a/app/src/main/cpp/android/: xmp_stub.c
android8-armeabi-v7a/app/src/main/cpp/android/include/: xmp.h
android8/app/: build.gradle.kts
android8/app/src/main/: AndroidManifest.xml
android8/app/src/main/assets/ue1_config/: AndroidController.ini  Default.ini  Unreal.ini
android8/app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.bak_music_cmake_plain_link  CMakeLists.txt.bak_music_libxmp
android8/app/src/main/cpp/UE1/Source/: CMakeLists.txt
android8/app/src/main/cpp/android/: sync_stub.c
android8/app/src/main/res/values/: styles.xml
ouya/: gradle.properties
ouya/app/: build.gradle.kts
ouya/app/src/main/: AndroidManifest.xml
ouya/app/src/main/assets/ue1_config/: AndroidController.ini  Default.ini  Unreal.ini  Unreal.ini.bak_20260501_014736  Unreal.ini.bak_E_res4_20260501_022643  Unreal.ini.bak_G_res4_20260501_023749
ouya/app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.bak_ouya_release_engine_o0_20260430_013131  CMakeLists.txt.bak_ouya_release_ue1_debugsafe_20260430_013803
ouya/app/src/main/cpp/UE1/Source/: CMakeLists.txt
ouya/app/src/main/cpp/UE1/Source/Core/: CMakeLists.txt
ouya/app/src/main/cpp/UE1/Source/Core/Inc/: Core.h
ouya/app/src/main/cpp/UE1/Source/Core/Src/: UnClass.cpp  UnConfig.cpp.rev35-backup  UnFile.cpp  UnFile.cpp.rev34-backup  UnLinker.h  UnPlat.cpp
ouya/app/src/main/cpp/UE1/Source/Engine/: CMakeLists.txt
ouya/app/src/main/cpp/UE1/Source/Engine/Classes/: Mover.uc
ouya/app/src/main/cpp/UE1/Source/Engine/Inc/: UnGame.h
ouya/app/src/main/cpp/UE1/Source/Engine/Src/: UnCanvas.cpp  UnCanvas.cpp.after_probe_confirmed  UnCanvas.cpp.bak_after_include_anchor  UnCanvas.cpp.bak_binary_anchor_linebased  UnCanvas.cpp.bak_compile_probe_after_include  UnCanvas.cpp.bak_define_probe  UnCanvas.cpp.bak_ouya_android_canvas_scale_forced_1  UnCanvas.cpp.bak_ouya_canvas_halfscale  UnCanvas.cpp.bak_ouya_canvas_halfscale_v2  UnCanvas.cpp.bak_ouya_force_canvas_scale_regex  UnCanvas.cpp.bak_remove_halfscale_really  UnCanvas.cpp.bak_ui_scale_15_no_halfscale  UnCanvas.cpp.bak_unconditional_compile_probe  UnCon.cpp  UnGame.cpp  UnScript.cpp
ouya/presets/: ouya_resolution_1280x720_snippet.ini  ouya_resolution_960x540_snippet.ini
sources/app/: build.gradle.kts
sources/app/src/main/: AndroidManifest.xml
sources/app/src/main/assets/ue1_config/: Default.ini  Unreal.ini
sources/app/src/main/cpp/UE1/Source/: CMakeLists.txt
windows/: .gitignore  UE1.slnx  UE1_Windows_VS2026.slnx  UE1_Windows_VS2026_With_NOpenGLESDrv.slnx  apply_enable_nopenglesdrv_vs2026.ps1  build_UE1_Windows_VS2026_RelWithDebInfo.cmd  build_UE1_Windows_VS2026_Release.cmd  clean_UE1_generated_builds.cmd  open_UE1_Windows_VS2026.cmd  where_are_my_build_files.cmd
windows/Source/: CMakeLists.txt  CMakePresets.json
windows/Source/Core/Inc/: UnConfig.h  UnFile.h
windows/Source/Core/Src/: UnConfig.cpp  UnConfig.cpp.rev36-backup  UnFile.cpp  UnLinker.h  UnPlat.cpp
windows/Source/Engine/Src/: UnCamMgr.cpp  UnCanvas.cpp  UnTex.cpp
windows/Source/Fire/: CMakeLists.txt
windows/Source/IpDrv/Src/: UdpLink.cpp
windows/Source/NOpenGLDrv/: NOpenGLDrv.cpp  NOpenGLDrvPrivate.h
windows/Source/NOpenGLESDrv/: NOpenGLESDrv.cpp  NOpenGLESDrvPrivate.h
windows/Source/NSDLDrv/Inc/: NSDLDrv.h
windows/Source/NSDLDrv/Src/: NSDLClient.cpp  NSDLViewport.cpp
windows/Source/Unreal/: CMakeLists.txt
windows/Source/Unreal/Src/: SDLLaunch.cpp
windows/Source/Unreal/Src/Res/: LaunchRes.rc
windows/Windows/: README_Windows_VisualStudio.md  build_vs2022_win32_debug.bat  build_vs2022_win32_relwithdebinfo.bat  build_vs2026_win32_debug.bat  build_vs2026_win32_nullsound_relwithdebinfo.bat  build_vs2026_win32_relwithdebinfo.bat  cleanup_legacy_windows_dlls.ps1  generate_and_open_vs2026_solution.bat  install_to_game_system.ps1  run_from_game_system.bat
(+135 files in other folders)
